--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -47,6 +47,6 @@ font-weight: 500;
     height: fit-content;
 }
 .my-text-cart span{
-    font-size: smaller;
+    font-size: x-small;
     color: gray;
 }
