--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -50,3 +50,8 @@ font-weight: 500;
     font-size: x-small;
     color: gray;
 }
+.icon-size{
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+}
