--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -10,7 +10,16 @@
                     <img [src]="item.image" alt="item.image" width="100" height="50">
                 </div>
                 <div class="my-text"><span>{{item.description|slice:0:100}}...</span>
-                    <h1>$ {{item.price}}</h1>
+                    <div class="flex">
+                        <div>
+                            <h1>$ {{item.price}}</h1>
+                        </div>
+                        <div class="flex ml-14">
+                            <button class="text-sm"><span class="bi bi-plus-circle"></span></button>
+                              <h1 class="ml-1 mr-1 text-balance">{{count}}</h1>
+                            <button class="text-sm"><span class="bi bi-dash-circle"></span></button>
+                        </div>
+                    </div>
                 </div>
             </div>
             }
@@ -28,8 +37,10 @@
                 <div class="flex justify-between">
                     <h4>Order total</h4>
                     <span class="pt-2">{{totalCount|currency:'USD'}}</span>
-                    <button type="button" class="btn btn-primary">Check out</button>
-                 </div>                      
+                </div>
+                <button type="button"
+                    class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 mt-10 w-full">Check
+                    Out</button>
             </div>
         </div>
     </div>
